--- a/main.ipynb
+++ b/main.ipynb
@@ -1,47 +1,66 @@
-import cv2
-import os
-import numpy as np
-
-# Load Haarcascade
-cascade = cv2.CascadeClassifier("haarcascade_frontalface_default.xml")
-
-dataset_path = "dataset"
-
-faces = []
-labels = []
-label_map = {}
-label_id = 0
-
-for person_name in os.listdir(dataset_path):
-    person_folder = os.path.join(dataset_path, person_name)
-
-    if not os.path.isdir(person_folder):
-        continue
-
-    label_map[label_id] = person_name
-
-    for image_name in os.listdir(person_folder):
-        image_path = os.path.join(person_folder, image_name)
-
-        img = cv2.imread(image_path)
-        if img is None:
-            continue
-
-        gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)
-        detected_faces = cascade.detectMultiScale(gray, 1.3, 5)
-
-        for (x, y, w, h) in detected_faces:
-            face = gray[y:y+h, x:x+w]
-            faces.append(face)
-            labels.append(label_id)
-
-    label_id += 1
-
-# Train LBPH recognizer
-recognizer = cv2.face.LBPHFaceRecognizer_create()
-recognizer.train(faces, np.array(labels))
-
-# Save model
-recognizer.save("face_model.yml")
-
-print("Training Complete!")
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3e245394",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m fetch_lfw_people\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'matplotlib'"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.datasets import fetch_lfw_people\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "import numpy as np\n",
+    "import os,cv2\n",
+    "\n",
+    "def plot_gallery(images, titles, h, w, n_row=3, n_col=4):\n",
+    "    \"\"\"Helper function to plot a gallery of portraits\"\"\"\n",
+    "    plt.figure(figsize=(1.8 * n_col, 2.4 * n_row))\n",
+    "    plt.subplots_adjust(bottom=0, left=.01, right=.99, top=.90, hspace=.35)\n",
+    "    for i in range(n_row * n_col):\n",
+    "        plt.subplot(n_row, n_col, i + 1)\n",
+    "        plt.imshow(images[i].reshape((h, w)), cmap=plt.cm.gray)\n",
+    "        plt.title(titles[i], size=12)\n",
+    "        plt.xticks(())\n",
+    "        plt.yticks(())"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
